# Malloc-Fantasy

./: CMakeCache.txt  CMakeLists.txt  Makefile  Malloc-Fantasy.cbp  README.md  cmake_install.cmake  main.c
Headers/: defs.h  draw.c  input.c  prototype.h  structs.h
Sources/: Start.c  battle.c  draw.c  ennemy.c  init.c  input.c  map.c  menu.c  music.c  player.c  sounds.c  stats.c  text.c
